# -1

./: .gitignore  BUILD.md  README.md  app.js  argtest.js  build.ps1  check_db.js  compare_sources.js  compare_sources_debug.js  dbtest.js  explain_query.js  index.html  inspect.js  inspect_indexes.js  main.js  package-lock.json  package.json  run_gui.bat  search_patterns.js  search_patterns2.js  server.js  style.css  test_all.js  test_query.js  test_query2.js  test_refs.js  test_specific.js  test_specific2.js
.github/workflows/: build.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
